fix: 关联操作增加控制参数